--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="logo">
               <img src="/assets/logo.jpg" alt="CRE Logo" />
             </div>
-            <p>PropRE</p>
+            <h1>PropRE</h1>
           </div>
         </div>
         <div class="container-right">
@@ -39,27 +39,32 @@
               </p>
             </div>
             <div class="box-middle">
-              <p>Let's do this.</p>
+              <p class="box-middle-hdr">Let's do this.</p>
               <div class="box-input">
                 <label for="first_name">First Name: </label>
-                <input type="text" id="first_name" name="first_name" />
+                <input type="text" id="first_name" name="first_name" required />
               </div>
               <div class="box-input">
                 <label for="last_name">Last Name: </label>
-                <input type="text" id="last_name" name="last_name" />
+                <input type="text" id="last_name" name="last_name" required />
               </div>
               <div class="box-input">
                 <label for="email">Email: </label>
-                <input type="email" id="email" name="email_address" />
+                <input type="email" id="email" name="email_address" required />
               </div>
 
               <div class="box-input">
                 <label for="password">Password: </label>
-                <input type="password" id="password" name="password" />
+                <input type="password" id="password" name="password" required />
               </div>
               <div class="box-input">
                 <label for="confirm_pass">Confirm Password: </label>
-                <input type="password" id="confirm_pass" name="confirm_pass" />
+                <input
+                  type="password"
+                  id="confirm_pass"
+                  name="confirm_pass"
+                  required
+                />
               </div>
             </div>
             <div class="box-bottom">
